--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {background-color:#000; }
 	height:200px;
 	margin-left:auto;
 	margin-right:auto;
-	background-color:#000;
+	background-image: url(img/bg-2020/fundo_01.jpg);
+	background-repeat: no-repeat;
 }
 #header {
 	background-color:#B9BD17;
@@ -227,7 +228,8 @@ body {background-color:#000; }
 #footer-container {
 	width:100%;
 	height:100px;
-	background-color:#000;
+	background-image: url(img/bg-2020/fundo_02.jpg);
+	background-repeat: repeat-y;
 }
 #footer {
 	width:800px;
