--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {background-color:#000; }
 	height:200px;
 	margin-left:auto;
 	margin-right:auto;
-	background-image: url(img/bg-2020/FUNDO_01.bmp);
+	background-color:#000;
 	background-repeat: no-repeat;
 }
 #header {
